--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
+/* App.css */
+
+body {
+  font-family: 'Red Hat Text', sans-serif;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background-color: hsl(0, 0%, 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.countdown-card {
+  perspective: 1000px;
+  width: 100px;
+  height: 150px;
+  margin: 10px;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countdown-card.flipped {
+  transform: rotateY(180deg);
+}
+
+.countdown-card > div {
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: bold;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.countdown-card .front {
+  background-color: hsl(237, 18%, 59%);
+  color: hsl(0, 0%, 100%);
+}
+
+.countdown-card .back {
+  background-color: hsl(345, 95%, 68%);
+  color: hsl(0, 0%, 100%);
 }
